k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: prod-blueprint
spec:
  selector:
    app: web-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
